# genuary2024

./: .gitignore  Cargo.toml  README.md
gen2024-01/: Cargo.toml
gen2024-01/src/: main.rs  model.rs
gen2024-05/: Cargo.toml  README.md
gen2024-05/.github/workflows/: build.yml
gen2024-05/src/: framework.rs  main.rs  model.rs
gen2024-07/: Cargo.toml  LICENSE  build.rs
gen2024-07/src/: framework.rs  main.rs  model.rs
