[package]
name = "gen2024_07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
nannou = "0.18.1"
pretty_env_logger = "0.5.0"

[features]
default = []
small = []
